--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "happy_to_do",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://surajventura.github.io/happytodo",
   "dependencies": {
     "firebase": "^5.3.1",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
@@ -14,6 +16,7 @@
     "redux-firestore": "^0.5.7"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
